--- a/index.html
+++ b/index.html
@@ -3,4 +3,7 @@
         <title>Mi primer Repositorio</title>
         <link rel="stylesheet" href="style.css">
     </head>
+    <body>
+        <h1>¡Hola Mundo!</h1>
+    </body>
 </html>
