--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Mi primer Repositorio</title>
         <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
     </head>
     <body>
         <h1>¡Hola Mundo!</h1>
